[gd_scene load_steps=10 format=3 uid="uid://ckvpempt84wyr"]

[ext_resource type="Script" path="res://codings/UIScripts/day_change_ui.gd" id="1_0cnvx"]
[ext_resource type="FontFile" uid="uid://cumufnoi2wx0i" path="res://UI/Fonts/cyrenia-bold.ttf" id="2_7fpk2"]
[ext_resource type="FontFile" uid="uid://sehkl0mea74i" path="res://UI/Fonts/cyrenia-regular.ttf" id="3_nxysf"]
[ext_resource type="FontVariation" uid="uid://b26p56yb7cgso" path="res://UI/Fonts/cyrenia-button.tres" id="4_wm8im"]

[sub_resource type="FontVariation" id="FontVariation_3cgs8"]
base_font = ExtResource("2_7fpk2")
variation_embolden = 0.35

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2u6j"]
content_margin_left = 32.0
content_margin_top = 0.0
content_margin_right = 32.0
content_margin_bottom = 0.0
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lqnuj"]
content_margin_left = 11.0
content_margin_right = 32.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 12
border_width_top = 5
border_width_right = 13
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 42
corner_radius_top_right = 42
corner_radius_bottom_right = 42
corner_radius_bottom_left = 42

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6bse"]
content_margin_left = 32.0
content_margin_top = 0.0
content_margin_right = 32.0
content_margin_bottom = 0.0
bg_color = Color(1, 1, 1, 1)
border_width_left = 12
border_width_top = 5
border_width_right = 13
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 42
corner_radius_top_right = 42
corner_radius_bottom_right = 42
corner_radius_bottom_left = 42

[sub_resource type="Theme" id="Theme_a0d8y"]
default_font = ExtResource("4_wm8im")
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_focus_color = Color(0.890196, 0.576471, 0.431373, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0.890196, 0.576471, 0.431373, 1)
Button/colors/font_pressed_color = Color(0.890196, 0.576471, 0.431373, 1)
Button/font_sizes/font_size = 32
Button/styles/disabled = SubResource("StyleBoxFlat_o2u6j")
Button/styles/focus = SubResource("StyleBoxFlat_lqnuj")
Button/styles/hover = SubResource("StyleBoxFlat_v6bse")
Button/styles/normal = SubResource("StyleBoxFlat_o2u6j")
Button/styles/pressed = SubResource("StyleBoxFlat_v6bse")

[node name="DayChangeUI" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_0cnvx")

[node name="Bg" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="DayCurrent" type="Label" parent="."]
offset_left = 708.0
offset_top = 336.0
offset_right = 815.0
offset_bottom = 435.0
theme_override_colors/font_color = Color(0.905882, 0.54902, 0.396078, 1)
theme_override_fonts/font = ExtResource("2_7fpk2")
theme_override_font_sizes/font_size = 100
text = "30"

[node name="Month" type="Label" parent="."]
offset_left = 196.0
offset_top = 330.0
offset_right = 646.0
offset_bottom = 429.0
theme_override_fonts/font = ExtResource("2_7fpk2")
theme_override_font_sizes/font_size = 100
text = "November"

[node name="Year" type="Label" parent="."]
offset_left = 875.0
offset_top = 336.0
offset_right = 1034.0
offset_bottom = 435.0
theme_override_colors/font_color = Color(0.447551, 0.447551, 0.447551, 1)
theme_override_fonts/font = ExtResource("2_7fpk2")
theme_override_font_sizes/font_size = 100
text = "  16"

[node name="Label" type="Label" parent="Year"]
visible = false
layout_mode = 0
offset_left = 11.0
offset_top = -15.0
offset_right = 53.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(0.447551, 0.447551, 0.447551, 1)
theme_override_fonts/font = ExtResource("3_nxysf")
theme_override_font_sizes/font_size = 32
text = "cin"

[node name="Label2" type="Label" parent="Year"]
layout_mode = 0
offset_left = -19.0
offset_top = 62.6359
offset_right = 45.0
offset_bottom = 167.636
rotation = -2.79032
scale = Vector2(-1.02936, 1.01063)
theme_override_colors/font_color = Color(0.447551, 0.447551, 0.447551, 1)
theme_override_fonts/font = SubResource("FontVariation_3cgs8")
theme_override_font_sizes/font_size = 75
text = "u"

[node name="Label3" type="Label" parent="Year"]
layout_mode = 0
offset_left = 18.0
offset_top = 82.6359
offset_right = 77.0
offset_bottom = 181.636
rotation = -3.14159
scale = Vector2(-1, 1)
theme_override_colors/font_color = Color(0.447551, 0.447551, 0.447551, 1)
theme_override_fonts/font = SubResource("FontVariation_3cgs8")
theme_override_font_sizes/font_size = 75
text = "C"

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NextDay" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.580469
anchor_top = 0.12125
anchor_right = 0.696875
anchor_bottom = 0.13
offset_left = 411.782
offset_top = 535.15
offset_right = 796.125
offset_bottom = 595.15
pivot_offset = Vector2(30, 30)
theme = SubResource("Theme_a0d8y")
text = "On to the next day"
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 6.725
anchor_top = 16.375
anchor_right = 25.2
anchor_bottom = 17.875
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 32
metadata/_edit_use_anchors_ = true

[node name="Options" type="Button" parent="Buttons/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../NextDay")
theme = SubResource("Theme_a0d8y")
text = "Options"
metadata/_edit_use_anchors_ = true

[node name="Journal" type="Button" parent="Buttons/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../NextDay")
theme = SubResource("Theme_a0d8y")
disabled = true
text = "Journal"
metadata/_edit_use_anchors_ = true

[node name="Quit" type="Button" parent="Buttons/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../NextDay")
theme = SubResource("Theme_a0d8y")
text = "Save and Quit"
metadata/_edit_use_anchors_ = true

[connection signal="focus_entered" from="Buttons/NextDay" to="." method="_cursor"]
[connection signal="pressed" from="Buttons/NextDay" to="." method="_on_next_day_pressed"]
[connection signal="focus_entered" from="Buttons/HBoxContainer/Options" to="." method="_cursor"]
[connection signal="pressed" from="Buttons/HBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="focus_entered" from="Buttons/HBoxContainer/Journal" to="." method="_cursor"]
[connection signal="focus_entered" from="Buttons/HBoxContainer/Quit" to="." method="_cursor"]
[connection signal="pressed" from="Buttons/HBoxContainer/Quit" to="." method="_on_quit_pressed"]
